made some changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
    </header>
    <main>
       <div id="banner">
-         BIG FANCY PIC
+      <div id="banner-desc">
+         <h1>This is my simple website</h1>
+         <p>I decided to make it very minimalist</p>
+      </div>
+      <div id="banner-img"><img src="assets/images/free-images-transparent-background-1.png" /></div>
       </div>
       <div id="icons">
          <div class="icon">
