--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 <body>
    <header>
-      <span>Company Logo</span>
+      <i class="fas fa-jedi"></i><span> MyCompany</span>
       <nav>
          <ul type="none">
-            <li>Home</li>
-            <li>Office</li>
-            <li>Class</li>
-            <li>New</li>
-            <li>About</li>
-            <li>Deals</li>
-            <li>Support</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Office</a></li>
+            <li><a href="#">Class</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Deals</a></li>
+            <li><a href="#">Support</a></li>
          </ul>
       </nav>
    </header>
@@ -90,7 +90,7 @@
       <div id="mini-layout">
          <div class="layout">
             <div class="layout-image">
-               <img src="" alt="" />
+               <img src="assets/images/1.jpg" alt="" />
             </div>
             <div>
                <strong>1</strong>
@@ -102,7 +102,7 @@
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="" alt="" />
+               <img src="assets/images/2.jpg" alt="" />
             </div>
             <div>
                <strong>2</strong>
@@ -114,7 +114,7 @@
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="" alt="" />
+               <img src="assets/images/3.jpg" alt="" />
             </div>
             <div>
                <strong>3</strong>
@@ -126,7 +126,7 @@
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="" alt="" />
+               <img src="assets/images/4.jpg" alt="" />
             </div>
             <div>
                <strong>4</strong>
