added alt to images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <h1>This is my simple website</h1>
          <p>I decided to make it very minimalist</p>
       </div>
-      <div id="banner-img"><img src="assets/images/free-images-transparent-background-1.png" /></div>
+      <div id="banner-img"><img src="assets/images/free-images-transparent-background-1.png" alt="Tree in winter, no leaves on branches"/></div>
       </div>
       <div id="icons">
          <div class="icon">
@@ -90,7 +90,7 @@
       <div id="mini-layout">
          <div class="layout">
             <div class="layout-image">
-               <img src="assets/images/1.jpg" alt="" />
+               <img src="assets/images/1.jpg" alt="A lake in the mountains" />
             </div>
             <div>
                <strong>1</strong>
@@ -102,7 +102,7 @@
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="assets/images/2.jpg" alt="" />
+               <img src="assets/images/2.jpg" alt="Looking up at trees" />
             </div>
             <div>
                <strong>2</strong>
@@ -114,7 +114,7 @@
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="assets/images/3.jpg" alt="" />
+               <img src="assets/images/3.jpg" alt="Standing in a paddleboard on the lake" />
             </div>
             <div>
                <strong>3</strong>
@@ -126,7 +126,7 @@
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="assets/images/4.jpg" alt="" />
+               <img src="assets/images/4.jpg" alt="A long, desolate pier" />
             </div>
             <div>
                <strong>4</strong>
