--- a/index.html
+++ b/index.html
@@ -93,48 +93,48 @@
                <img src="assets/images/1.jpg" alt="A lake in the mountains" />
             </div>
             <div>
-               <strong>1</strong>
+               <strong>Qui dolorem ipsum</strong>
             </div>
             <div>
-               <p>Some text</p>
+               <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
             </div>
-            <div><a href="#">Some link</a></div>
+            <div><a href="#">Lorem ipsum dolor sit amet</a></div>
          </div>
          <div class="layout">
             <div class="layout-image">
-               <img src="assets/images/2.jpg" alt="Looking up at trees" />
+               <img src="assets/images/2.jpg" alt="Looking up at the tops of trees (which are in the shape of a heart)" />
             </div>
             <div>
-               <strong>2</strong>
+               <strong>Magnam aliquam quaerat</strong>
             </div>
             <div>
-               <p>Some text</p>
+               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
             </div>
-            <div><a href="#">Some link</a></div>
+            <div><a href="#">Totam rem aperiam</a></div>
          </div>
          <div class="layout">
             <div class="layout-image">
                <img src="assets/images/3.jpg" alt="Standing in a paddleboard on the lake" />
             </div>
             <div>
-               <strong>3</strong>
+               <strong>Nisi ut aliquid ex ea</strong>
             </div>
             <div>
-               <p>Some text</p>
+               <p>Quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
             </div>
-            <div><a href="#">Some link</a></div>
+            <div><a href="#">Nemo enim ipsam</a></div>
          </div>
          <div class="layout">
             <div class="layout-image">
                <img src="assets/images/4.jpg" alt="A long, desolate pier" />
             </div>
             <div>
-               <strong>4</strong>
+               <strong>Quis autem vel eum</strong>
             </div>
             <div>
-               <p>Some text</p>
+               <p>Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione.</p>
             </div>
-            <div><a href="#">Some link</a></div>
+            <div><a href="#">Voluptatem sequi nesciunt</a></div>
          </div>
       </div>
    </main>
